# automobile-complete

./: .env.sample  .gitignore  MANIFEST.in  PRIVACY.md  README.md  TODO.md  automobile-complete.spec  automobile_complete.py  build-ubuntu.sh  build-windows.bat  custom-completions.txt  demo.py  get_words.py  interactive_demo.py  preprocess.py  pyproject.toml  sample.html  trie.py
assets/: completionlist.txt  merged-completionlist.txt  merged-wordlist.txt
chrome-extension/: .gitignore  README.md  SETUP.md  TROUBLESHOOTING.md  automobile-complete.js  baked-completions.js  build-extension.js  content-script.js  create_icons.py  manifest.json  popup.html  popup.js  service-worker.js  setup.sh
demos/: bash_input.sh  py_console.py  py_console_2.py  py_input.py  py_input_2.py
react-native-engine/: App.tsx  README.md  UNIVERSAL_USAGE.md  app.json  build.js  demo.html  package-lock.json  package.json
react-native-engine/src/attachment/: attachAutocomplete.ts  config.ts  elementDetection.ts  selectorAttachment.ts
react-native-engine/src/attachment/overlay/: CompletionOverlay.ts  index.ts  styles.ts
react-native-engine/src/attachment/textManipulation/: BackspaceProcessor.ts  ContentEditableTextManipulator.ts  InputTextManipulator.ts  TextManipulator.ts  index.ts
react-native-engine/src/components/: AutocompleteDemo.tsx  AutocompleteField.tsx  AutocompleteInput.tsx  CompletionDropdown.tsx  CompletionDropdownOption.tsx  GithubLink.tsx  GithubLink.web.tsx  ThemeSelector.tsx
react-native-engine/src/data/: sample-completions.txt
react-native-engine/src/engine/: AutocompleteTextController.ts  CoreTrie.ts  Trie.ts  attachAutocomplete.ts  browser.ts  constants.ts  index.ts
react-native-engine/src/theme/: DarkTheme.ts  LightTheme.ts  Theme.ts  index.ts
react-native-engine/src/utils/: ConfigCacheController.ts  storage.ts
src/automobile_complete/: __init__.py  __main__.py  cli.py
src/automobile_complete/completionlist/: __init__.py  cli.py  completionlist.py  node.py  parse.py
src/automobile_complete/completionlist/merge/: __init__.py  cli.py  merge.py
src/automobile_complete/engine/: __init__.py  core_trie.py  trie.py
src/automobile_complete/run/: __init__.py  cli.py  input.py
src/automobile_complete/utils/: chars.py  colors.py  env.py  find_project_root.py  terminal.py  terminal_colors.py  typehints.py  validate_env.py
src/automobile_complete/utils/env/: __init__.py  coerce.py  env.py  load.py
src/automobile_complete/utils/terminal/: README.md  __init__.py  colors.py  cursor.py  q.py  raw_colors.py  terminal.py  terminal_colors.py
src/automobile_complete/wordlist/: __init__.py  read.py
src/automobile_complete/wordlist/merge/: __init__.py  cli.py  merge.py
src/automobile_complete/wordlist/write/: __init__.py  cli.py  corpus.py  wordfreq.py
