[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "automobile-complete"
version = "0.1.0"
description = "An intelligent autocomplete system with frequency-based trie data structures"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Unlicense"}
authors = [
    {name = "Torin Halsted", email = "modularizer@gmail.com"},
]
keywords = ["autocomplete", "trie", "text-completion", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: Public Domain",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "wordfreq>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.scripts]
amc = "automobile_complete.cli:main"
amc-validate-env = "automobile_complete.utils.validate_env:main"
amcc = "automobile_complete.completionlist.cli:main"
amcmc = "automobile_complete.completionlist.merge.cli:main"
amcw = "automobile_complete.wordlist.write.cli:main"
amcmw = "automobile_complete.wordlist.merge.cli:main"

[project.urls]
Homepage = "https://github.com/modularizer/automobile-complete"
Repository = "https://github.com/modularizer/automobile-complete"
Issues = "https://github.com/modularizer/automobile-complete/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["assets/*.txt", ".env.sample"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py38"

